2019-06-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Fix typo when initializing
	number_coordinates.  Somehow GCC and clang let this typo slip by.

2019-06-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dib.c (ReadDIBImage): Preserve PseudoClass opaque
	representation if ICO mask is opaque, otherwise return a
	DirectClass image.

2019-06-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Detect an error in TracePath() and
	quit rather than forging on.

2019-06-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Terminate drawing if
	DrawCompositeMask() reports failure.  Fixes oss-fuzz 12373
	"graphicsmagick/coder_MVG_fuzzer: Timeout in
	graphicsmagick_coder_MVG_fuzzer".
	(TracePath): Terminate path parsing upon first parsing error.

2019-06-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/txt.c (ReadTXTImage): Use real a new-line character as
	line delimiter rather than '\n' string.

	* magick/annotate.c (AnnotateImage): No longer implicitly call
	TranslateText() since this is not suitable for most use-cases and
	causes additional performance impact.  The API user can perform
	such translations in advance on the text string using
	TranslateText() if need be.  No longer call StringToList() to
	split strings into an array of strings since this can lead to
	unexpected results, and a custom-splitter is more efficient.

2019-06-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Only support '@filename' syntax to
	read drawing primitive from a file if we are not already drawing.

	* magick/utility.c (TranslateTextEx): Remove support for reading
	from a file using '@filename' syntax due to security concerns.
	Problem was reported to us by "Battle Furry" via the
	GraphicsMagick security mail alias on June 6, 2019.

2019-06-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
