@@ -364,6 +364,16 @@ else
 DIST_ARCHIVE_RPM=
 endif # HAS_RPM
 
+# Add zstd compression to output files
+DIST_TARGETS = dist-lzip dist-xz dist-bzip2 dist-gzip dist-zstd
+DIST_ARCHIVES = $(distdir).tar.gz $(distdir).tar.bz2 $(distdir).tar.lz \
+	$(distdir).tar.xz $(distdir).tar.zst
+
+# Rules to build a .tar.zst tarball
+dist-zstd: distdir
+	tardir=$(distdir) && $(am__tar) | ZSTD_CLEVEL=$${ZSTD_CLEVEL-19} zstd -c >$(distdir).tar.zst
+	$(am__post_remove_distdir)
+
 #
 # Build a validated snapshot release and move to the snapshots directory.
 #
@@ -411,6 +421,13 @@ coverity:
 GMMAGICKSYMBOLS=$(srcdir)/magick/symbols.h
 GMWANDSYMBOLS=$(srcdir)/wand/wand_symbols.h
 
+# Build symbols files to add 'gm' prefix to functions
 gmsymbols:
 	$(srcdir)/scripts/gmsymbols.sh magick/.libs/libGraphicsMagick.a MAGICK > $(GMMAGICKSYMBOLS)
 	$(srcdir)/scripts/gmsymbols.sh wand/.libs/libGraphicsMagickWand.a MAGICK_WAND > $(GMWANDSYMBOLS)
+
+# Convenient target to build release archive files and sign them.
+release: $(DIST_WINDOWS_SRC_7ZIP) distcheck
+	for file in $(DIST_ARCHIVES) $(DIST_WINDOWS_SRC_7ZIP) ; do \
+	  gpg2 --output $${file}.sig --detach-sig $${file} ; \
+	done
