@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190611"
-#define public MagickPackageReleaseDate "snapshot-20190611"
+#define public MagickPackageVersionAddendum ".020190614"
+#define public MagickPackageReleaseDate "snapshot-20190614"
